--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ license = { file = "LICENSE" }
 
 dependencies = [
     "fastapi>=0.115.12",
-    "hypercorn>=0.17.3",
     "pydantic>=2.10.5",
     "pydantic-settings>=2.7.1",
     "tinydb>=4.8.2",
+    "uvicorn>=0.34.2",
 ]
 
 [tool.uv]
