--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,7 +36,7 @@
     "UV_PROJECT_ENVIRONMENT": "/home/vscode/.venv"
   },
   "postCreateCommand": "uv sync --frozen",
-  "postStartCommand": "uv run pre-commit install && uv run uvicorn backend.__main__:run --factory --reload",
+  "postStartCommand": "uv run pre-commit install && uv run uvicorn backend.__main__:run --factory --reload --port 8080",
   "remoteUser": "vscode",
-  "forwardPorts": [8000]
+  "forwardPorts": [8080]
 }
